2008-09-19  okkez  <okkez000@gmail.com>

	* hiki/config.rb (Hiki::Config#database): add new method.

	* hiki.cgi: use Hiki::Config#datacase.

	* hiki/xmlrpc.rb (Hiki::XMLRPCHandler#init_handler): ditto.

	* misc/webrick/hikilet.rb (Hikilet#do_GET): ditto.

2008-09-18 KURODA Hiraku <hiraku@sapporo.email.ne.jp>
	* plugin/50bayes_filter.rb, plugin/en/50bayes_filter.rb,
	  plugin/ja/50bayes_filter.rb, test/spec_50bayes_filter.rb
	  : In submitted_page_diff, show difference of text using
	    Util#word_diff.

2008-09-18 KURODA Hiraku <hiraku@sapporo.email.ne.jp>
	* hiki/filter.rb, hiki/filter/bayes_filter.rb,
	  hiki/filter/word_filter.rb, test/spec_bayes_filter.rb
	  : In bayes filter, when text is posted by registered user and
	    judged as spam, add text to ham-db.


2008-08-07 KURODA Hiraku <hiraku@sapporo.email.ne.jp>
	* messages/en.rb: Fix typo. Reported by Kouhei Sutou.

2008-08-06 KURODA Hiraku <hiraku@sapporo.email.ne.jp>
	* hiki/repos/hg.rb, test/test_repos_hg.rb: support mercurial
	repository.

2008-08-06 KURODA Hiraku <hiraku@sapporo.email.ne.jp>
	* hiki/filter/bayes_filter/bayes.rb: Update bayes library.
	* hiki/filter/bayes_filter.rb, plugin/50bayes_filter.rb,
	test/spec_50bayes_filter.rb, test/spec_bayes_filter.rb
	: + Limit number of times of adding ham/spam into database to 10 times.
	  + Add new threshold for ham, then post for page is treated as 'doubt' if threshold_ham < score < threshold(for spam).

2008-07-06 SAKAI Masahiro <masahiro.sakai@gmail.com>
	* misc/plugin/rss.rb: applied patch Hiki-dev:01126,01127.
	* style/rd+/rd2html.rb: applied patch Hiki-dev:01163.

2008-06-25 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/00default.rb: display RUBY_PATCHLEVEL in footer.

2008-05-18  KURODA Hiraku  <hiraku@sapporo.email.ne.jp>
	* hiki/filter/bayes_filter.rb, plugin/50bayes_filter.rb,
	plugin/en/50bayes_filter.rb, plugin/ja/50bayes_filter.rb
	: Add feature to limit to show submitted pages.
